--- a/output/team.html
+++ b/output/team.html
@@ -27,21 +27,108 @@
       <div class="row">
         <div class="team-area col-12 d-flex justify-content-center">
           <div class="card employee-card">
-  <div class="card-header">
-    <h2 class="card-title">2</h2>
-    <h3 class="card-title"><i class="fas fa-mug-hot mr-2"></i>Manager</h3>
-  </div>
-  <div class="card-body">
-    <ul class="list-group">
-      <li class="list-group-item">ID: 2</li>
-      <li class="list-group-item">
-        Email: <a href="mailto:3">3</a>
-      </li>
-      <li class="list-group-item">Office number: 2</li>
-    </ul>
-  </div>
-</div>
-
+            <div class="card-header">
+              <h2 class="card-title">Carina</h2>
+              <h3 class="card-title">
+                <i class="fas fa-mug-hot mr-2"></i>Manager
+              </h3>
+            </div>
+            <div class="card-body">
+              <ul class="list-group">
+                <li class="list-group-item">ID: 123</li>
+                <li class="list-group-item">
+                  Email: <a href="mailto:test@test">test@test</a>
+                </li>
+                <li class="list-group-item">Office number: 123</li>
+              </ul>
+            </div>
+          </div>
+          <div class="card employee-card">
+            <div class="card-header">
+              <h2 class="card-title">Mac</h2>
+              <h3 class="card-title">
+                <i class="fas fa-glasses mr-2"></i>Engineer
+              </h3>
+            </div>
+            <div class="card-body">
+              <ul class="list-group">
+                <li class="list-group-item">ID: 1234</li>
+                <li class="list-group-item">
+                  Email: <a href="mailto:test@test">test@test</a>
+                </li>
+                <li class="list-group-item">
+                  GitHub:
+                  <a
+                    href="https://github.com/test"
+                    target="_blank"
+                    rel="noopener noreferrer"
+                    >test</a
+                  >
+                </li>
+              </ul>
+            </div>
+          </div>
+          ,
+          <div class="card employee-card">
+            <div class="card-header">
+              <h2 class="card-title">Oreo</h2>
+              <h3 class="card-title">
+                <i class="fas fa-glasses mr-2"></i>Engineer
+              </h3>
+            </div>
+            <div class="card-body">
+              <ul class="list-group">
+                <li class="list-group-item">ID: 12345</li>
+                <li class="list-group-item">
+                  Email: <a href="mailto:test@test">test@test</a>
+                </li>
+                <li class="list-group-item">
+                  GitHub:
+                  <a
+                    href="https://github.com/testing"
+                    target="_blank"
+                    rel="noopener noreferrer"
+                    >testing</a
+                  >
+                </li>
+              </ul>
+            </div>
+          </div>
+          <div class="card employee-card">
+            <div class="card-header">
+              <h2 class="card-title">Todd</h2>
+              <h3 class="card-title">
+                <i class="fas fa-user-graduate mr-2"></i>Intern
+              </h3>
+            </div>
+            <div class="card-body">
+              <ul class="list-group">
+                <li class="list-group-item">ID: 123456</li>
+                <li class="list-group-item">
+                  Email: <a href="mailto:test@test">test@test</a>
+                </li>
+                <li class="list-group-item">School: Univeristy of Cats</li>
+              </ul>
+            </div>
+          </div>
+          ,
+          <div class="card employee-card">
+            <div class="card-header">
+              <h2 class="card-title">Reyes</h2>
+              <h3 class="card-title">
+                <i class="fas fa-user-graduate mr-2"></i>Intern
+              </h3>
+            </div>
+            <div class="card-body">
+              <ul class="list-group">
+                <li class="list-group-item">ID: 1234567</li>
+                <li class="list-group-item">
+                  Email: <a href="mailto:test@test">test@test</a>
+                </li>
+                <li class="list-group-item">School: University of Tests</li>
+              </ul>
+            </div>
+          </div>
         </div>
       </div>
     </div>
