--- a/output/team.html
+++ b/output/team.html
@@ -37,18 +37,18 @@
       <li class="list-group-item">
         Email: <a href="mailto:test@test.com">test@test.com</a>
       </li>
-      <li class="list-group-item">Office number: 1</li>
+      <li class="list-group-item">Office number: 123</li>
     </ul>
   </div>
 </div>
 <div class="card employee-card">
   <div class="card-header">
-    <h2 class="card-title">Jane</h2>
+    <h2 class="card-title">Mac</h2>
     <h3 class="card-title"><i class="fas fa-glasses mr-2"></i>Engineer</h3>
   </div>
   <div class="card-body">
     <ul class="list-group">
-      <li class="list-group-item">ID: 123</li>
+      <li class="list-group-item">ID: 1234</li>
       <li class="list-group-item">
         Email: <a href="mailto:test@test.com">test@test.com</a>
       </li>
@@ -66,7 +66,7 @@
 </div>
 ,<div class="card employee-card">
   <div class="card-header">
-    <h2 class="card-title">James</h2>
+    <h2 class="card-title">Jane</h2>
     <h3 class="card-title"><i class="fas fa-glasses mr-2"></i>Engineer</h3>
   </div>
   <div class="card-body">
@@ -89,12 +89,12 @@
 </div>
 ,<div class="card employee-card">
   <div class="card-header">
-    <h2 class="card-title">World</h2>
+    <h2 class="card-title">Jack</h2>
     <h3 class="card-title"><i class="fas fa-glasses mr-2"></i>Engineer</h3>
   </div>
   <div class="card-body">
     <ul class="list-group">
-      <li class="list-group-item">ID: 12345</li>
+      <li class="list-group-item">ID: 1234</li>
       <li class="list-group-item">
         Email: <a href="mailto:test@test.com">test@test.com</a>
       </li>
@@ -110,39 +110,16 @@
     </ul>
   </div>
 </div>
-,<div class="card employee-card">
-  <div class="card-header">
-    <h2 class="card-title">Oreo</h2>
-    <h3 class="card-title"><i class="fas fa-glasses mr-2"></i>Engineer</h3>
-  </div>
-  <div class="card-body">
-    <ul class="list-group">
-      <li class="list-group-item">ID: 12345</li>
-      <li class="list-group-item">
-        Email: <a href="mailto:test@test.com">test@test.com</a>
-      </li>
-      <li class="list-group-item">
-        GitHub:
-        <a
-          href="https://github.com/test4"
-          target="_blank"
-          rel="noopener noreferrer"
-          >test4</a
-        >
-      </li>
-    </ul>
-  </div>
-</div>
 <div class="card employee-card">
   <div class="card-header">
-    <h2 class="card-title">John</h2>
+    <h2 class="card-title">Tom</h2>
     <h3 class="card-title">
       <i class="fas fa-user-graduate mr-2"></i>Intern
     </h3>
   </div>
   <div class="card-body">
     <ul class="list-group">
-      <li class="list-group-item">ID: 1234</li>
+      <li class="list-group-item">ID: 123</li>
       <li class="list-group-item">
         Email: <a href="mailto:test@test.com">test@test.com</a>
       </li>
@@ -152,52 +129,18 @@
 </div>
 ,<div class="card employee-card">
   <div class="card-header">
-    <h2 class="card-title">Todd</h2>
+    <h2 class="card-title">Jerry</h2>
     <h3 class="card-title">
       <i class="fas fa-user-graduate mr-2"></i>Intern
     </h3>
   </div>
   <div class="card-body">
     <ul class="list-group">
-      <li class="list-group-item">ID: 12345</li>
+      <li class="list-group-item">ID: 123</li>
       <li class="list-group-item">
         Email: <a href="mailto:test@test.com">test@test.com</a>
       </li>
       <li class="list-group-item">School: UH</li>
-    </ul>
-  </div>
-</div>
-,<div class="card employee-card">
-  <div class="card-header">
-    <h2 class="card-title">Mac</h2>
-    <h3 class="card-title">
-      <i class="fas fa-user-graduate mr-2"></i>Intern
-    </h3>
-  </div>
-  <div class="card-body">
-    <ul class="list-group">
-      <li class="list-group-item">ID: 123456</li>
-      <li class="list-group-item">
-        Email: <a href="mailto:test@test.com">test@test.com</a>
-      </li>
-      <li class="list-group-item">School: HCC</li>
-    </ul>
-  </div>
-</div>
-,<div class="card employee-card">
-  <div class="card-header">
-    <h2 class="card-title">Kate</h2>
-    <h3 class="card-title">
-      <i class="fas fa-user-graduate mr-2"></i>Intern
-    </h3>
-  </div>
-  <div class="card-body">
-    <ul class="list-group">
-      <li class="list-group-item">ID: 1234567</li>
-      <li class="list-group-item">
-        Email: <a href="mailto:test@test.com">test@test.com</a>
-      </li>
-      <li class="list-group-item">School: LSS</li>
     </ul>
   </div>
 </div>
